--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -5,7 +5,7 @@
       <ul class="links-list">
         <li><a href="/">Home</a></li>
         <li><a href="/about">About</a></li>
-        <li><a href="/projects">Projects</a></li>
+        <li><a href="/#projects">Projects</a></li>
         <li><a href="/blog">Blog</a></li>
         <li><a href="/blog/index.xml">RSS</a></li>
       </ul>
@@ -16,7 +16,7 @@
         <li><a href="https://github.com/taravancil">GitHub</a></li>
         <li><a href="https://twitter.com/taravancil">Twitter</a></li>
         <li><a href="https://instagram.com/taravancil">Instagram</a></li>
-        <li><a href="">My bookmarks</a></li>
+        <li><a href="https://pinboard.in/u:taravancil">My bookmarks</a></li>
       </ul>
     </div>
   </div>
