--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -6,7 +6,7 @@
     <div class="nav-items">
       <a class="nav-item" href="/">Home</a>
       <a class="nav-item" href="/about">About</a>
-      <a class="nav-item" href="/projects">Projects</a>
+      <a class="nav-item" href="/#projects">Projects</a>
       <a class="nav-item" href="/blog">Blog</a>
     </div>
   </div>
