--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -1,7 +1,7 @@
 <nav class="nav">
   <div class="container">
     <div class="name">
-      <a>Tara Vancil</a>
+      <a href="/">Tara Vancil</a>
     </div>
     <div class="nav-items">
       <a class="nav-item" href="/">Home</a>
