--- a/layouts/partials/post-summary.html
+++ b/layouts/partials/post-summary.html
@@ -1,6 +1,6 @@
 <li class="post-summary">
   <h3 class="title">
-    <a href="{{ .RelPermalink }}">{{ .Title }}</a>
+    <a href="{{ .Permalink }}">{{ .Title }}</a>
   </h3>
 
   <div class="metadata">
@@ -10,6 +10,6 @@
   </div>
 
   <p class="summary">
-    {{ .Summary }} <a href="{{ .RelPermalink }}" class="more">Read more &raquo;</a>
+    {{ .Summary }} <a href="{{ .URL }}" class="more">Read more &raquo;</a>
   </p>
 </li>
