--- a/src/scss/utils/_placeholders.scss
+++ b/src/scss/utils/_placeholders.scss
@@ -12,11 +12,7 @@
 }
 
 %link {
-    color: blue;
-
-  &:hover {
-    text-decoration: underline;
-  }
+  text-decoration: underline; // TODO
 }
 
 %transition {
