--- a/layouts/404.html
+++ b/layouts/404.html
@@ -2,19 +2,17 @@
 <html>
   {{ partial "head.html" . }}
   <body>
+    {{ partial "nav.html" . }}
     <div class="container">
-      {{ partial "header.html" . }}
       <main class="main">
         <article class="main__content post">
           <h1>Page Not Found </h1>
           <div class="post__content">
-            <p>
-              Sorry, that page doesn't exist.</p>
-</p>
-</div>
-</article>
-</main>
-{{ partial "footer.html" . }}
-</div>
-</body>
+            <p>Sorry, that page doesn't exist.</p>
+          </div>
+        </article>
+      </main>
+    </div>
+    {{ partial "footer.html" . }}
+  </body>
 </html>
