--- a/layouts/_default/li.html
+++ b/layouts/_default/li.html
@@ -4,7 +4,7 @@
       {{ .Date.Format "Jan 02, 2006" }}
     </span>
   </div>
-  <a href="{{ .RelPermalink }}" class="title">
+  <a href="{{ .Permalink }}" class="title">
     {{ .Title }}
   </a>
 </li>
