--- a/layouts/_default/terms.html
+++ b/layouts/_default/terms.html
@@ -3,8 +3,8 @@
   {{ partial "head.html" . }}
 
   <body>
+    {{ partial "nav.html" }}
     <div class="container">
-    {{ partial "header.html" }}
       <main>
 	      <h1>{{ .Title }}</h1>
 	      <ul>
@@ -18,7 +18,7 @@
           {{ end }}
 	      </ul>
       </main>
-      {{ partial "footer.html" . }}
     </div>
+    {{ partial "footer.html" . }}
   </body>
 </html>
