--- a/layouts/blog/rss.html
+++ b/layouts/blog/rss.html
@@ -1,7 +1,7 @@
 <rss version="2.0" xmlns:atom="http://www.w3.org/2005/Atom">
   <channel>
     <title>{{ with .Title }}{{.}} on {{ end }}{{ .Site.Title }}</title>
-    <link>{{ .RelPermalink }}</link>
+    <link>{{ .URL }}</link>
     <description>Recent content {{ with .Title }}in {{.}} {{ end }}on {{ .Site.Title }}</description>
     <generator>Hugo -- gohugo.io</generator>{{ with .Site.LanguageCode }}
     <language>{{.}}</language>{{end}}{{ with .Site.Author.email }}
@@ -13,10 +13,10 @@
     {{ range first 15 .Data.Pages }}
     <item>
       <title>{{ .Title }}</title>
-      <link>{{ .RelPermalink }}</link>
+      <link>{{ .URL }}</link>
       <pubDate>{{ .Date.Format "Mon, 02 Jan 2006 15:04:05 -0700" | safeHTML }}</pubDate>
       {{ with .Site.Author.email }}<author>{{.}}{{ with $.Site.Author.name }} ({{.}}){{end}}</author>{{end}}
-      <guid>{{ .RelPermalink }}</guid>
+      <guid>{{ .URL }}</guid>
       <description>{{ .Content | html }}</description>
     </item>
     {{ end }}
