--- a/layouts/section/blog.html
+++ b/layouts/section/blog.html
@@ -6,14 +6,14 @@
     {{ partial "nav.html" }}
     <div class="container">
       <main>
-	      <h2>Posts</h2>
+	      <h1>Blog</h2>
 	      <ul class="posts-list">
 	        {{ range (where .Data.Pages "Section" "blog") }}
 	        {{ .Render "li" }}
 	        {{ end }}
 	      </ul>
       </main>
-      {{ partial "footer.html" . }}
     </div>
+    {{ partial "footer.html" . }}
   </body>
 </html>
