--- a/layouts/section/tags.html
+++ b/layouts/section/tags.html
@@ -2,18 +2,18 @@
 <html>
   {{ partial "head.html" . }}
 
-  <body>
+  <body class="tags">
+    {{ partial "nav.html" }}
     <div class="container">
-    {{ partial "header.html" }}
       <main>
-	      <h2>Posts</h2>
+	      <h1>Tags</h1>
 	      <ul class="posts-list">
           {{ range $name, $taxonomy := .Site.taxonomies.tags }}
           <li>{{ $name }}tag</li>
 	        {{ end }}
 	      </ul>
       </main>
-      {{ partial "footer.html" . }}
     </div>
+    {{ partial "footer.html" . }}
   </body>
 </html>
