--- a/layouts/taxonomy/category.html
+++ b/layouts/taxonomy/category.html
@@ -2,9 +2,9 @@
 <html>
   {{ partial "head.html" . }}
 
-  <body>
+  <body class="category">
+    {{ partial "nav.html" }}
     <div class="container">
-    {{ partial "header.html" }}
       <main>
 	      <h1><a href="/categories">Categories</a> &raquo {{ .Title }}</h1>
 	      <ul class="posts-list">
@@ -13,7 +13,7 @@
 	        {{ end }}
 	      </ul>
       </main>
-      {{ partial "footer.html" . }}
     </div>
+    {{ partial "footer.html" . }}
   </body>
 </html>
