Add GitHub link

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -146,6 +146,7 @@
               {{ end }}
             {{ end }}
           </ul>
+          <a class="more" href="https://github.com/taravancil">View more on GitHub &raquo;</a>
         </div>
       </div>
     </main>
