Update about me information

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -6,7 +6,9 @@
     <div class="container">
       <main>
         <h1>{{ .Title }}</h1>
-        {{ .Content }}
+        <div class="content">
+          {{ .Content }}
+        </div>
       </main>
     </div>
     {{ partial "footer.html" . }}
