--- a/layouts/index.html
+++ b/layouts/index.html
@@ -16,8 +16,10 @@
             </p>
 
             <p>
-              I help build <a href="https://beakerbrowser.com">
-              Beaker</a>, an experimental peer-to-peer browser, and <a href="https://hashbase.io">Hashbase</a>, a cloud peer service for files hosted with the Dat protocol.
+              I help build <a href="https://beakerbrowser.com"> Beaker</a>, a
+              peer-to-peer Web browser, and
+              <a href="https://hashbase.io">Hashbase</a>, a cloud peer service
+              for files hosted with the Dat protocol.
             </p>
 
             <!-- TODO -->
