--- a/layouts/partials/post-summary.html
+++ b/layouts/partials/post-summary.html
@@ -10,6 +10,7 @@
   </div>
 
   <p class="summary">
-    {{ .Summary }} <a href="{{ .Permalink }}" class="more">Read more &raquo;</a>
+    {{ .Summary }}
+    <a href="{{ .Permalink }}" class="more">Read more &raquo;</a>
   </p>
 </li>
