Make relative links work in Hashbase
Fixes #1

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -26,9 +26,9 @@
           </div>
 
           <div class="nav-links">
-            <a href="/about">About me</a>
+            <a href="/about/">About me</a>
             <a href="#projects">My work</a>
-            <a href="/blog">Blog</a>
+            <a href="/blog/">Blog</a>
           </div>
         </div>
 
