--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -4,9 +4,9 @@
     <div class="links internal">
       <ul class="links-list">
         <li><a href="/">Home</a></li>
-        <li><a href="/about">About</a></li>
-        <li><a href="/#projects">Projects</a></li>
-        <li><a href="/blog">Blog</a></li>
+        <li><a href="/about/">About</a></li>
+        <li><a href="/#projects/">Projects</a></li>
+        <li><a href="/blog/">Blog</a></li>
         <li><a href="/blog/index.xml">RSS</a></li>
       </ul>
     </div>
