Tidy up some posts

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -87,7 +87,7 @@
 
       <div id="projects" class="projects">
         <div class="container">
-          <h2>My projects</h2>
+          <h2>My work</h2>
 
           <ul class="projects-list">
             {{ range $.Site.Data.projects }}
