--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -1,10 +1,7 @@
 <nav class="nav">
   <div class="container">
-    <div class="name">
-      <a href="/">Tara Vancil</a>
-    </div>
     <div class="nav-items">
-      <a class="nav-item" href="/">Home</a>
+      <a class="nav-item name" href="/">Tara Vancil</a>
       <a class="nav-item" href="/about/">About</a>
       <a class="nav-item" href="/#projects">Projects</a>
       <a class="nav-item" href="/blog/">Blog</a>
