--- a/src/scss/base/_reset.scss
+++ b/src/scss/base/_reset.scss
@@ -14,8 +14,10 @@ ul {
   list-style: none;
 }
 
-p:not(:last-child) {
-  margin-bottom: 1.5rem;
+p:not(:last-child),
+table {
+  display: block;
+  margin-bottom: 1.3rem;
 }
 
 a, a:hover {
