Use apple system font/default sans serif in posts

--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -1,6 +1,6 @@
 body {
   font-family: Rubik;
-  font-family: Rubik, 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: Rubik, -apple-system, BlinkMacSystemFont, sans-serif;
   font-size: 14px;
   line-height: 1.45;
   text-rendering: optimizeLegibility;
