--- a/src/scss/themes/_code.scss
+++ b/src/scss/themes/_code.scss
@@ -4,7 +4,7 @@
 
 pre,
 code {
-  font-family: Consolas, 'Lucida console', monaco, monospace;
+  font-family: Consolas, 'Lucida console', Menlo, monaco, monospace;
   font-size: .85rem;
   font-weight: 500;
 }
