Update about me info

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -12,14 +12,14 @@
           </h1>
           <div class="intro">
             <p>
-              Hi. I'm Tara Vancil.
+              Hi. I'm Tara.
             </p>
 
             <p>
-              I help build <a href="https://beakerbrowser.com"> Beaker</a>, a
-              peer-to-peer Web browser, and
-              <a href="https://hashbase.io">Hashbase</a>, a cloud peer service
-              for files hosted with the Dat protocol.
+              I'm co-founder of <a href="https://bluelinklabs.com">Blue Link Labs</a>,
+              the team behind <a href="https://beakerbrowser.com">Beaker</a>, a
+              peer-to-peer Web browser, and <a href="https://hashbase.io">Hashbase</a>,
+              a cloud peer service for files hosted with the <a href="https://github.com/datproject/dat">Dat protocol</a>.
             </p>
 
             <!-- TODO -->
