Add post content list styles

--- a/src/scss/pages/_post.scss
+++ b/src/scss/pages/_post.scss
@@ -58,7 +58,17 @@ body.post {
     a {
       @extend %link;
     }
+
+    ul {
+      list-style: disc;
+      margin-bottom: 20px;
+      margin-left: 40px;
+
+    li {
+      margin-bottom: 4px;
+    }
   }
+ }
 
   blockquote {
     color: transparentize(black, .3);
