Add currently reading section to homepage

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -21,6 +21,18 @@
               peer-to-peer Web browser, and <a href="https://hashbase.io">Hashbase</a>,
               a cloud peer service for files hosted with the <a href="https://github.com/datproject/dat">Dat protocol</a>.
             </p>
+
+            <h2>I'm currently <a href="/reading-list">reading</a>:</h2>
+            <ul>
+              {{ range $.Site.Data.books.current.books }}
+                <li>
+                  <h3>
+                    <a href="{{ .link }}">{{ .title }}</a>
+                  </h3>
+                  by {{ .author }}
+                </li>
+              {{ end }}
+            </ul>
           </div>
 
           <div class="nav-links">
