Add colophon and tweak about page

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -16,7 +16,7 @@
             </p>
 
             <p>
-              I'm co-founder of <a href="https://bluelinklabs.com">Blue Link Labs</a>,
+              I'm the co-founder of <a href="https://bluelinklabs.com">Blue Link Labs</a>,
               the team behind <a href="https://beakerbrowser.com">Beaker</a>, a
               peer-to-peer Web browser, and <a href="https://hashbase.io">Hashbase</a>,
               a cloud peer service for files hosted with the <a href="https://github.com/datproject/dat">Dat protocol</a>.
