--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -9,6 +9,7 @@
         <li><a href="/blog/">Blog</a></li>
         <li><a href="/reading-list/">Reading List</a></li>
         <li><a href="/blog/index.xml">RSS</a></li>
+        <li><a href="/about#colophon">Colophon</a></li>
       </ul>
     </div>
 
