--- a/layouts/index.html
+++ b/layouts/index.html
@@ -64,7 +64,7 @@
           </div>
 
           <div class="talks">
-            <h2>Talks</h2>
+            <h2>Speaking</h2>
             <ul class="talks-list">
               {{ range sort $.Site.Data.talks ".weight" }}
                 <li>
