Add Fritter profile link

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -16,6 +16,7 @@
     <div class="links external">
       <ul class="links-list">
         <li><a href="https://github.com/taravancil">GitHub</a></li>
+        <li><a href="dat://fritter.hashbase.io/user/dat://6348fac3c70e916885ead7dce6927f01e02c0efd1a9273849891c23b7e7bac4d">Fritter</a></li>
         <li><a href="https://twitter.com/taravancil">Twitter</a></li>
         <li><a href="https://instagram.com/taravancil">Instagram</a></li>
         <li><a href="https://pinboard.in/u:taravancil">My bookmarks</a></li>
