Rename reading list to bookshelf

--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -5,7 +5,7 @@
       <a class="nav-item" href="/about/">About</a>
       <a class="nav-item" href="/#projects">Projects</a>
       <a class="nav-item" href="/blog/">Blog</a>
-      <a class="nav-item" href="/reading-list/">Reading List</a>
+      <a class="nav-item" href="/bookshelf/">Bookshelf</a>
     </div>
   </div>
 </nav>
