--- a/src/scss/pages/all.scss
+++ b/src/scss/pages/all.scss
@@ -1,6 +1,6 @@
 @import 'base';
 @import 'home';
 @import 'post';
-@import 'reading-list';
+@import 'bookshelf';
 @import 'recipe';
 @import 'nails';
