--- a/layouts/index.html
+++ b/layouts/index.html
@@ -22,7 +22,7 @@
               a cloud peer service for files hosted with the <a href="https://github.com/datproject/dat">Dat protocol</a>.
             </p>
 
-            <h2>I'm currently <a href="/reading-list">reading</a>:</h2>
+            <h2>I'm currently <a href="/bookshelf/">reading</a>:</h2>
             <ul>
               {{ range $.Site.Data.books.current.books }}
                 <li>
