--- a/src/scss/pages/_bookshelf.scss
+++ b/src/scss/pages/_bookshelf.scss
@@ -13,6 +13,11 @@ body.bookshelf {
       margin-bottom: 15px;
     }
 
+    ul,
+    ol {
+      padding-left: 20px;
+    }
+
     ul {
       list-style: disc;
       padding-left: 20px;
