--- a/src/scss/pages/_post.scss
+++ b/src/scss/pages/_post.scss
@@ -74,6 +74,7 @@ body.post {
     ol {
       margin-bottom: 20px;
       margin-left: 40px;
+      padding: 0;
 
       li {
         margin-bottom: 4px;
