--- a/layouts/section/nails.html
+++ b/layouts/section/nails.html
@@ -12,13 +12,14 @@
 
     <meta property="twitter:site" content="@taravancil">
 
-    <meta property="og:title" content="Amateur nail art by Tara Vancil">
-    <meta name="twitter:title" content="Amateur nail art by Tara Vancil">
+    <meta property="og:title" content="Nails - Tara Vancil">
+    <meta name="twitter:title" content="Nails - Tara Vancil">
 
     <link rel="stylesheet"
           href="https://fonts.googleapis.com/css?family=Rubik:400,500,700">
     <link rel="stylesheet" href="/css/style.min.css" />
-    <link rel="icon" href="/favicon3.ico">
+    <link rel="stylesheet" href="/css/nails.min.css" />
+    <link rel="icon" href="/images/favicon.png">
   </head>
 
   <body class="nails post">
