--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,18 +1,37 @@
 <!doctype html>
-<html>
+<html lang="en">
   {{ partial "head.html" . }}
-  <body>
-    {{ partial "nav.html" . }}
-    <div class="container">
+  <link rel="stylesheet" href="/css/404.min.css"/>
+  <body class="404">
+    <style>
+      .avatar {
+        position: absolute;
+        left: 0;
+        top: 0;
+        z-index: -1;
+        width: 100vw;
+        height: 100vh;
+        line-height: 100vh;
+        font-size: 225px;
+      }
+      @media (min-width: 500px) {
+        .avatar {
+          font-size: 350px;
+        }
+      }
+      body {
+        color: #fff;
+      }
+    </style>
+
+    <div class="container narrow">
       <main class="main">
-        <article class="main__content post">
-          <h1>Page Not Found </h1>
-          <div class="post__content">
-            <p>Sorry, that page doesn't exist.</p>
-          </div>
-        </article>
+        <h1>Page Not Found</h1>
+        <p>
+          <a href="/">Back to home</a>
+        </p>
+        <div class="avatar" aria-hidden="true">:-(</div>
       </main>
     </div>
-    {{ partial "footer.html" . }}
   </body>
 </html>
