--- a/layouts/blog/single.html
+++ b/layouts/blog/single.html
@@ -26,8 +26,9 @@
   </head>
 
   <body class="post">
-    {{ partial "nav.html" }}
-    <div class="container">
+    {{ partial "breadcrumbs.html" . }}
+
+    <div class="container wide">
       <main class="main">
         <article class="content">
           <div class="info">
