--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,10 +1,12 @@
 <!doctype html>
 <html>
   {{ partial "head.html" . }}
-  <body class="post">
-    {{ partial "nav.html" }}
-    <div class="container">
-      <main>
+
+  <body class="about post">
+    {{ partial "breadcrumbs.html" . }}
+
+    <div class="container narrow">
+      <main role="main">
         <h1>{{ .Title }}</h1>
         <div class="content">
           {{ .Content }}
