--- a/src/scss/base/_reset.scss
+++ b/src/scss/base/_reset.scss
@@ -17,10 +17,18 @@ ul {
 p:not(:last-child),
 table {
   display: block;
-  margin-bottom: 1.3rem;
+  margin-bottom: 25px;
 }
 
 a, a:hover {
   color: inherit;
-  text-decoration: none;
+}
+
+button,
+.btn {
+  border: 0;
+  outline: none;
+  background: none;
+  font-family: inherit;
+  font-size: inherit;
 }
