--- a/src/scss/components/_figure.scss
+++ b/src/scss/components/_figure.scss
@@ -8,8 +8,8 @@ figure {
 }
 
 figcaption {
+  @extend .small-text;
   max-width: 500px;
   margin: 5px auto 0 auto;
-  font-size: 12px;
-  color: rgba(0,0,0,0.7);
+  color: $color-text--muted;
 }
