Update component imports

--- a/src/scss/components/all.scss
+++ b/src/scss/components/all.scss
@@ -1,12 +1,7 @@
-// Components are standalone items, and styles in this directory should only
-// style the component, its modifiers, and perhaps its children.
-
-@import 'post-summary';
-@import 'posts-list';
 @import 'footnotes';
-@import 'tags';
-@import 'pagination';
 @import 'figure';
-@import 'browser-status';
-@import 'tables';
 @import 'rc-scout';
+@import 'avatar';
+@import 'buttons';
+@import 'icons';
+@import 'breadcrumbs';
